--- a/react10/src/whetherapp.css
+++ b/react10/src/whetherapp.css
@@ -2,40 +2,42 @@
 {
     display: flex;
     flex-direction: column;
-    width: 500px;
-    height: 600px;
+    width: 330px;
+    height: 500px;
     background-color: rgba(80, 62, 238, 0.486);
     margin: auto;
-    margin-top: 100px;
+    margin-top: 60px;
     box-sizing: border-box;
     box-shadow: 0px 7px 29px blue,
     0px -7px 29px rgb(0, 166, 255);
 }
 .whetherimg img
 {
-    width:260px;
+    width:160px;
     height: 100px;
     margin: auto;
-    margin-top: 40px;
+    margin-top: 50px;
 }
 .searchbar img
 {
     width: 20px;
     height: 20px;
+    cursor: pointer;
     margin-left: 0px;
     position: relative;
 }
 .wind img
 {
-    width: 70px;
+    width: 40px;
     height: auto;
 }
 .searchbar .searchinput
 {
     background-color: rgb(247, 244, 244);
-    width: 290px;
+    width: 190px;
     height: 50px; 
     border-radius: 50px;
+    margin-left: 50px;
 }
 .searchbar
 {
@@ -60,30 +62,33 @@
 {
     width: 290px;
     height: 45px;
+    padding-top: 5px;
     border: none;
+    padding-left: 10px;
     background:transparent;
     outline: none;
 }
 .whetherdata
 {
-    margin: 0px 130px;
+    margin: 0px 80px;
     margin-top: 20px;
 }
 .whethercel
 {
-    font-size: 49px;
-    margin-left: 59px;
+    font-size: 40px;
+    margin-left: 19px;
 }
 .location
 {
-    font-size: 24px;
-    margin-left: 70px;
+    font-size: 22px;
+    font-weight: 500;
+    margin-left: 30px;
 }
 .wind
 {
     display: flex;
     justify-content: space-around;
-    margin-top: 99px;
+    margin-top: 39px;
 }
 .huminiy
 {
@@ -108,7 +113,7 @@
 }
 .windspeed .windspeeddata
 {
-  font-size: 22px;
+  font-size: 20px;
   margin-top: 0px;
 }
 .windspeed span
@@ -122,7 +127,16 @@
     flex-direction: column;
     gap:0px ;
 }
+.windspeeddata p
+{
+
+    margin-top: 50px;
+}
+.huminityimg img
+{
+margin-top: 30px;
+}
 .windspeedimg
 {
-    margin-top: 10px;
+    margin-top: 30px;
 }
